# SDL_basic_GL

./: CMakeLists.txt  main.c
